Edited wiki page ASC2 through web user interface.

--- a/wiki/ASC2.wiki
+++ b/wiki/ASC2.wiki
@@ -263,6 +263,7 @@ Copyright 2003-2012 Adobe Systems Incorporated. All rights reserved.
 *links:*
  * [http://www.bytearray.org/?p=4789 Introducing ASC 2.0] by Thibault Imbert (Adobe)
  * [http://helpx.adobe.com/flash-builder/actionscript-compiler-backward-compatibility.html ActionScript Compiler 2.0 Backward Compatibility] (Adobe Documentation)
+ * [http://gotoandlearn.com/play.php?id=170 Inlining Functions with ASC 2.0] by Lee Brimelow (Adobe)
  * [http://gaming.adobe.com/technologies/flascc/ Flash C++ Compiler] (Adobe)
  * [http://www.adobe.com/devnet/air/air-sdk-download.html Download Adobe AIR SDK] (Adobe)
  * [http://obtw.wordpress.com/2013/04/03/making-bytearray-faster/ Making ByteArray faster] by Romil Mittal (Adobe)
