--- a/trunk/changelog.txt
+++ b/trunk/changelog.txt
@@ -18,6 +18,7 @@
 - changed source and sdk path to use "macintosh" and not "darwin" or "osx"
 - added new folder "extras"
 - added extra for DocBlockr package used with Sublime Text
+- reimplemented fully errno, now we support all constants for all OS
 
 * 0.4.0 Akihabara (from tag 1R000)
 - BRAND NEW REFACTOR NO BACKWARD COMPATIBILITY
@@ -73,6 +74,8 @@
 - both components redtamarin.swc and redtamarin.abc reuse the same
   redtamarin.as file from src/
 - shell_toplevel.py use the same redtamarin.as than redtamarin.py
+     */
+    public const AAAAA:int = __errno.AAAAA;
 - forced to update the way we deal with versioning
   only builtins can use CONFIG::AIR_1_0 etc.
   when you are defining avmglue API you need to use AVMGLUE::AIR_1_0
