--- a/trunk/changelog.txt
+++ b/trunk/changelog.txt
@@ -18,7 +18,9 @@
 - changed source and sdk path to use "macintosh" and not "darwin" or "osx"
 - added new folder "extras"
 - added extra for DocBlockr package used with Sublime Text
-- reimplemented fully errno, now we support all constants for all OS
+- reimplemented fully errno.h, now we support all constants for all OS
+- fully implemented limits.h, with support/compat for all OS
+- added the option to generate fat swc for redtamarin.swc
 
 * 0.4.0 Akihabara (from tag 1R000)
 - BRAND NEW REFACTOR NO BACKWARD COMPATIBILITY
