Edited wiki page UTF8Notes through web user interface.

--- a/wiki/UTF8Notes.wiki
+++ b/wiki/UTF8Notes.wiki
@@ -163,11 +163,11 @@ Those 2 pages explain the rest, eg. you need more than just converting char to w
 
 Which functions do you have to supports ?
 
-|| POSIX || Windows (narrow) || Windows (wide) ||
+|| *POSIX* || *Windows (narrow)* || *Windows (wide)* ||
 ||  ||  ||  ||
 ||  ||  ||  ||
 ||  ||  ||  ||
-|| mkdir || _mkdir || _wmkdir ||
+|| `mkdir` || `_mkdir` || `_wmkdir` ||
 ||  ||  ||  ||
 ||  ||  ||  ||
 ||  ||  ||  ||
